--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.mjs"
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -17,7 +18,8 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.1"
+    "mongoose": "^8.14.1",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "vite-plugin-remove-console": "^2.2.0"
