--- a/docappointment/package.json
+++ b/docappointment/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
-    "react-router-dom": "^6.22.3",
     "daisyui": "^5.0.43",
     "framer-motion": "^12.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^6.22.3",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
@@ -28,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.0.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-remove-console": "^2.2.0"
   }
 }
